// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders correctly 1`] = `
<hr
  class="Divider"
  data-lego="react"
/>
`;

exports[`Divider renders with incoming className 1`] = `
<hr
  class="Divider className"
  data-lego="react"
/>
`;
